Updates: 1) Header Component is now rendering properly the buttons; 2) updates in en.json and de.json to add translations; 3) Help_de and Help_en json files have all help contents in english and german; 4) Enhance translations in AddProduct page; 5) Include a help button in Delete a product; 6) Enhance trasnlations in Login Page

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -164,6 +164,15 @@
     "error": {
       "fetch": "Fehler beim Abrufen der Produkte.",
       "details": "Fehler beim Abrufen der Produktdetails."
+    },
+    "header": {
+      "defaultTitle": "StockEase",
+      "subtitle": "Verwalten Sie Ihre Produkte und Bestände",
+      "logout": "Abmelden",
+      "returnToDashboard": "Zurück zum Dashboard"
+    },
+    "help": {
+    "button": "Hilfe"
     }
   }
 }
