--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -172,7 +172,7 @@
       "returnToDashboard": "Zurück zum Dashboard"
     },
     "help": {
-    "button": "Hilfe"
+    "button": "hilfe"
     }
   }
 }
