Updates: 1) Updated Json language references to show info about user both in english and German; 2) Changed Admin and User Dashboard allowing Help button in both language versions; 3) Changed user Dashboard to show stock value and low stock products; 4) Added a help button for both in german and English in Login Page; 5) Added a Help button in Add a product page, for both version languages

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -11,9 +11,13 @@
     }
   },
   "userDashboard": {
-  "title": "Benutzer-Dashboard",
-  "welcome": "Willkommen, Benutzer!",
-  "subtitle": "Sehen und verwalten Sie Ihr Inventar effizient."
+    "title": "Benutzer-Dashboard",
+    "welcome": "Willkommen, Benutzer!",
+    "subtitle": "Sehen und verwalten Sie Ihr Inventar effizient.",
+    "stockValue": "Gesamtbestandwert",
+    "lowStock": "Produkte mit niedrigem Bestand",
+    "sufficientStock": "Alle Produkte sind ausreichend auf Lager",
+    "error": "Fehler beim Laden der Dashboard-Daten. Bitte versuchen Sie es erneut."
   },
   "errorBoundary": {
     "title": "Etwas ist schief gelaufen!",
