updating translation of bar chart in both german and english

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -50,7 +50,8 @@
     "stockValue": "Gesamtbestandwert",
     "lowStock": "Produkte mit niedrigem Bestand",
     "sufficientStock": "Alle Produkte sind ausreichend auf Lager",
-    "error": "Fehler beim Laden der Dashboard-Daten. Bitte versuchen Sie es erneut."
+    "error": "Fehler beim Laden der Dashboard-Daten. Bitte versuchen Sie es erneut.",
+   "lowStockContribution": "Beitrag von Produkten mit niedrigem Bestand zum Gesamtwert"
   },
   "buttons": {
     "addProduct": "Produkt hinzufügen",
