updates; 1) Changes in translation files about the login credentials; 2) Transfer old files with the backup extention inside a directory named (backup); 3) changed LoginPage to accept pre filled credentials to enable recruiters a easy access to the system; 4)Added comments in AdminDashboard files to reflect changes in displaying graph charts.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -18,6 +18,7 @@
     "password": "Passwort",
     "button": "Anmelden",
     "backToHome": "Zurück zur Startseite",
+    "defaultCredentials": "Standard-Login: admin / admin123",
     "error": {
       "emptyFields": "Bitte füllen Sie alle Felder aus",
       "invalidCredentials": "Ungültiger Benutzername oder Passwort",
